--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="projects" id="projects">
-            <h2>Selected projects</h2><br>
+            <h2>Selected projects HTML, CSS, SASS and BOOTSTRAP</h2><br>
             <h4>These are the projects I created, in each project I used the tools that we have learned.</h4><br>
             <div class="container">
                 <div class="item box1"><img src="images/discover world.png" alt="discover" height="150" width="205"
@@ -121,13 +121,67 @@
             </div>
         </div>
 
+        <div class="projectsJs" id="projectsJs">
+            <h2>Selected projects Java Script</h2><br>
+            <h4>These are the projects I created, in each project I used the tools that we have learned.</h4><br>
+            <div class="container">
+                <div class="item box1"><img src="images/coming-soon.png" alt="discover" height="150" width="205"
+                        id="img">
+                    <h4>PAGE BUILDER</h4>
+                    <p>HTML CSS JS</p>
+                    <a href="../Project1/projectJavaScript/test-pageBuilder/index.html"><button id="btn">Click to the
+                            project</button></a>
+                </div>
+
+
+                <div class="item box2"><img src="images/coming-soon.png" alt="consultation" height="150" width="205"
+                        id="img">
+                    <h4>SIMON GAME</h4>
+                    <p>HTML CSS JS</p>
+                    <a href="../Project1/projectJavaScript/Simon/index.html"><button id="btn">Click to the
+                            project</button></a>
+                </div>
+
+
+
+                <div class="item box3"><img src="images/coming-soon.png" alt="box" height="150" width="205" id="img">
+                    <h4>NULL</h4>
+                    <p>NULL</p>
+                    <a href="#"><button id="btn">Click to the
+                            project</button></a>
+                </div>
+
+
+
+                <div class="item box4"><img src="images/coming-soon.png" alt="" height="150" width="205" id="img">
+                    <h4>NULL</h4>
+                    <p>SASS
+                    </p><a href="#"><button id="btn">Click to the project</button></a>
+                </div>
+
+
+
+                <div class="item box5"><img src="images/coming-soon.png" alt="" height="150" width="205" id="img">
+                    <h4>NULL</h4>
+                    <p>SASS
+                    </p><a href="#"><button id="btn">Click to the
+                            project</button></a>
+                </div>
+
+
+
+                <div class="item box6"><img src="images/coming-soon.png" alt="" height="150" width="205" id="img">
+                    <h4>NULL</h4>
+                    <p>bootstrap</p><a href="#"><button id="btn">Click to the
+                            project</button></a>
+                </div>
+            </div>
+        </div>
+
         <div class="contact" id="contact">
             <img src="images/contactUs.png" alt="contactUs">
             <form>
                 <h2 id="form-headline">Contact us</h2>
-
-                <p id="form-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                </p>
 
                 <div class="form-control">
                     <label>full name</label>
